or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
License for more details.
.
You should have received a copy of the GNU Lesser General Public License
along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
MA 02111-1307, USA.


2002-03-13  Kevin Ryde  <kevin@swox.se>

	* demos/expr/exprfr.c: More mpfr functions, corrections to agm, cos,
	sin, rename log2 constant to loge2 to make room for log2 function.
	* demos/expr/t-expr.c: More tests.

	* mpz/inp_raw.c (NTOH_LIMB_FETCH) [generic 16bit]: Remove spurious "+".

	* mpfr/acos.c: Avoid a memory leak for certain operands.

	* acinclude.m4, configure.in (GMP_C_DOUBLE_FORMAT): New macro.

	* acinclude.m4 (GMP_HPC_HPPA_2_0, GMP_ASM_UNDERSCORE,
	GMP_ASM_ALIGN_LOG, GMP_ASM_LSYM_PREFIX, GMP_ASM_W32, GMP_ASM_X86_MMX):
	Change ac_objext to OBJEXT, which is the documented variable.

	* config.guess (powerpc*-*-*): Use #ifdef on constants POWER_630 etc
	in the AIX test, since old versions don't have them all.


2002-03-11  Kevin Ryde  <kevin@swox.se>

	* configure.in (LIBC211): New AC_DEFINE, for mpfr.
	
	* configure.in (mips*-*-*): Support ABI=o32 on irix 6, allow gcc 2.7.2
	to fall back on it, but detect it doesn't work with gcc 2.95.  Use
	single mips-defs.m4 for both mips32 and mips64.
	* acinclude.m4 (GMP_GCC_MIPS_O32): New macro.
	* mpn/mips32/mips-defs.m4: Renamed from mips.m4.
	* mpn/mips64/mips.m4: Remove (was a copy of mips32/mips.m4).

	* mpn/powerpc32/750: New directory.
	* configure.in (powerpc740, powerpc750, powerpc7400): Use it.
	* mpn/powerpc32/750/gmp-mparam.h: New file.

	* config.sub, gmp.texi (ultrasparc1): Remove this, just use plain
	"ultrasparc".

2002-03-10  Kevin Ryde  <kevin@swox.se>

	* mpfr: Update to 20020301, except internal_ceil_exp2.c,
	internal_ceil_log2.c, internal_floor_log2.c renamed to i_ceil_exp2.c,
	i_ceil_log2.c, i_floor_log2.c to be unique in DOS 8.3.  And sqrtrem.c